--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "scraper2",
+  "name": "scraper",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/cosmos": "^3.17.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
