--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/cosmos": "^3.17.2",
+    "@azure/storage-blob": "^12.12.0",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
