--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "scraper",
+  "name": "cd-scraper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/dist/index",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsc | node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +17,9 @@
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "playwright": "^1.29.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "typescript": "^4.9.4"
   }
 }
