--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cd-scraper",
   "version": "1.0.0",
   "description": "",
-  "main": "/dist/index",
+  "main": "index",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc | node dist/index.js"
+    "dev": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
