added support for dry run, and separate urls file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node index.ts"
+    "dev": "ts-node index.ts",
+    "dry": "ts-node index.ts dry-run-mode"
   },
   "author": "",
   "license": "ISC",
