--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,15 @@
     "target": "es2017",
     "module": "ESNext",
     "moduleResolution": "node",
-    "paths": {},
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/*"]
+    }
   },
   "ts-node": {
     "esm": true
