--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "dev": "ts-node src/index.ts",
     "dry": "ts-node src/index.ts dry-run-mode"
   },
@@ -20,8 +21,26 @@
     "playwright": "^1.29.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "jest": {
+    "preset": "ts-jest/presets/default-esm",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/",
+      "<rootDir>/node_modules/"
+    ],
+    "extensionsToTreatAsEsm": [
+      ".ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
+    }
   }
 }
