--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "ESNext",
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -13,6 +13,8 @@
       "*": ["node_modules/*", "src/*"]
     }
   },
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules"],
   "ts-node": {
     "esm": true
   }
