--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index",
   "type": "module",
   "scripts": {
-    "test": "jest --coverage",
+    "prestart": "tsc",
+    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js tests/",
     "test:watch": "jest --watch",
     "dev": "ts-node src/index.ts",
     "dry": "ts-node src/index.ts dry-run-mode"
@@ -20,26 +21,11 @@
     "playwright": "^1.31.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.191",
-    "jest": "^29.4.3",
-    "ts-jest": "^29.0.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
-  "jest": {
-    "preset": "ts-jest/presets/default-esm",
-    "modulePathIgnorePatterns": [
-      "<rootDir>/dist/",
-      "<rootDir>/node_modules/"
-    ],
-    "extensionsToTreatAsEsm": [
-      ".ts"
-    ],
-    "globals": {
-      "ts-jest": {
-        "useESM": true
-      }
-    }
+    "typescript": "^4.9.5"
   }
 }
