--- a/package.json
+++ b/package.json
@@ -3,29 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "main": "index",
-  "type": "module",
   "scripts": {
-    "prestart": "tsc",
     "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js tests/",
     "test:watch": "jest --watch",
-    "dev": "ts-node src/index.ts",
-    "dry": "ts-node src/index.ts dry-run-mode"
+    "dev": "npx esrun src/index.ts",
+    "dry": "npx esrun src/index.ts dry-run-mode"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@azure/cosmos": "^3.17.3",
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
-    "playwright": "^1.31.2"
+    "playwright": "^1.44.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.191",
+    "esrun": "^3.2.26",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
