--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "",
   "main": "index",
   "scripts": {
-    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js tests/",
-    "test:watch": "jest --watch",
+    "test": "npx jest",
     "dev": "npx esrun src/index.ts",
     "dry": "npx esrun src/index.ts dry-run-mode"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/cosmos": "^3.17.3",
+    "@azure/cosmos": "latest",
     "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
+    "dotenv": "latest",
     "lodash": "^4.17.21",
     "playwright": "^1.44.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@types/lodash": "^4.14.191",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.4",
+    "@types/node": "^20.12.12",
     "esrun": "^3.2.26",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.9.5"
   }
 }
